# pytest-mutator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
pytest_mutator/: __init__.py  __main__.py  cache.py  plugin.py
tests/: test_pytest_mutator.py
