[tool.poetry]
name = "pytest-mutator"
version = "0.1.0"
description = ""
authors = ["Nathan Page <nathanrpage97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
