[tool.poetry]
name = "pytest-mutator"
version = "0.1.0"
description = ""
authors = ["Nathan Page <nathanrpage97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.9.3"
taskipy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
