[tool.poetry]
name = "pytest-mutator"
version = "0.1.0"
description = ""
authors = ["Nathan Page <nathanrpage97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
parso = "^0.8.1"
glob2 = "^0.7"
click = "^7.1.2"
pony = "^0.7.14"
junit-xml = "1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
mypy = "^0.812"
pre-commit = "^2.9.3"
taskipy = "^1.5.1"
isort = "^5.6.4"

[tool.poetry.plugins]
pytest11 = { mutator = "pytest_mutator.plugin" }

[tool.poetry.scripts]
mutmut = "pytest_mutator.__main__:climain"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
known_first_party = "pytest_mutator"
